# R1Armkinematics

./: README.md  think.md
install/: local_setup.sh  setup.sh
install/armForwardkinematics/lib/armForwardkinematics/: pino_armkine_node
install/arm_dynamics_hw/share/arm_dynamics_hw/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arm_dynamics_hw/share/arm_dynamics_hw/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  arm_dynamics_hwConfig-version.cmake  arm_dynamics_hwConfig.cmake
install/arm_dynamics_hw/share/arm_dynamics_hw/config/: RC_config.yaml  effort_control.yaml
install/arm_dynamics_hw/share/arm_dynamics_hw/environment/: ament_prefix_path.dsv  path.dsv
install/arm_dynamics_hw/share/arm_dynamics_hw/include/gazebo_tuner/: GazeboTuner.h
install/arm_dynamics_hw/share/arm_dynamics_hw/launch/: arm_dynamics.launch.py  get_entity_state.py  gui.py
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/: ARMvertical.csv  ARMvertical.urdf  R1ARMvertical.csv  R1ARMvertical.urdf  R1arm.urdf  R1arm_control.urdf  R1arm_off_collison.urdf
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/ARMvertical/: CMakeLists.txt  package.xml
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/ARMvertical/config/: joint_names_ARMvertical.yaml
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/ARMvertical/launch/: display.launch  gazebo.launch
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/ARMvertical/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/ARMvertical/urdf/: ARM_gazebo_autoexport.urdf  ARM_gazebo_off_collsion.urdf  ARMvertical.csv  ARMvertical.urdf
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/FinalARM/: CMakeLists.txt  package.xml
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/FinalARM/launch/: display.launch  gazebo.launch
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/FinalARM/meshes/: base_link.STL  link2.STL  link3.STL
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/FinalARM/urdf/: FinalARM.csv  FinalARM.urdf
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/FinalArm/FinalArm/: CMakeLists.txt  package.xml
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/FinalArm/FinalArm/launch/: display.launch  gazebo.launch
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/FinalArm/FinalArm/meshes/: base_link.STL  link2.STL  link3.STL
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/FinalArm/FinalArm/urdf/: FinalArm.csv  FinalArm.urdf
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/finalArm/: CMakeLists.txt  package.xml
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/finalArm/launch/: display.launch  gazebo.launch
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/finalArm/meshes/: link2.STL  link3.STL
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/finalArm/urdf/: finalArm.csv  finalArm.urdf
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/zwzArm/: CMakeLists.txt  package.xml
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/zwzArm/config/: joint_names_zwzArm.yaml
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/zwzArm/launch/: display.launch  gazebo.launch
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/zwzArm/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL
install/arm_dynamics_hw/share/arm_dynamics_hw/urdf/zwzArm/urdf/: zwzArm.csv  zwzArm.urdf
install/arm_dynamics_hw/share/arm_dynamics_hw/worlds/: empty_world.world
log/: latest_build
src/: cmake_commands.sh
src/armForwardkinematics/: CMakeLists.txt  package.xml
src/armForwardkinematics/config/: config.yaml
src/armForwardkinematics/source/: pid.cpp
src/armForwardkinematics/src/: armPino.cpp
src/armend_visualize/: CMakeLists.txt  package.xml
src/armend_visualize/include/armend_visualize/: visualize.hpp
src/armend_visualize/src/: main.cpp
src/gui_pkg/: setup.py
src/public/mit_msgs/: CMakeLists.txt
src/xsm_msg/: CMakeLists.txt
src/xsm_msg/msg/: Hwrev.msg  Path.msg
(+266 files in other folders)
